--- a/core-web/libs/dotcms-webcomponents/src/components/dot-asset-drop-zone/dot-asset-drop-zone.scss
+++ b/core-web/libs/dotcms-webcomponents/src/components/dot-asset-drop-zone/dot-asset-drop-zone.scss
@@ -1,5 +1,6 @@
 @import "../../global/variables";
 @import "../../../../dotcms-scss/shared/colors";
+@import "../../../../dotcms-scss/shared/fonts";
 
 dot-asset-drop-zone {
     .dot-asset-drop-zone__indicators {
