feat(edit-content) add tests #28879

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-search-list/dot-category-field-search-list.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-search-list/dot-category-field-search-list.component.scss
@@ -5,7 +5,7 @@
     overflow: hidden;
 }
 
-::ng-deep .dotTable.p-datatable > .p-datatable-wrapper {
+:host ::ng-deep .dotTable.p-datatable > .p-datatable-wrapper {
     border-radius: 0;
     border: none;
 }
