--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.html
@@ -42,7 +42,7 @@
                     (itemChecked)="store.addSelected($event)"
                     (removeItem)="store.removeSelected($event)"
                     [isLoading]="store.isSearchLoading()"
-                    [categories]="store.searchCategories()"
+                    [categories]="store.searchCategoryList()"
                     [selected]="store.selected()" />
                 }
             </div>
