--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-search-list/dot-category-field-search-list.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-search-list/dot-category-field-search-list.component.html
@@ -1,9 +1,10 @@
 <div #tableContainer class="category-field__search-list">
     @if (!isLoading()) {
     <p-table
+        data-testId="categories-table"
         [scrollHeight]="$scrollHeight()"
         [scrollable]="true"
-        [value]="$searchResults()"
+        [value]="categories()"
         dataKey="key"
         selectionMode="multiple"
         [(selection)]="itemsSelected"
@@ -12,17 +13,21 @@
         (onRowUnselect)="onRemoveItem($event)"
         styleClass="dotTable ">
         <ng-template pTemplate="header">
-            <tr>
-                <th>
+            <tr data-testId="table-header">
+                <th id="checkbox" scope="col" data-testId="table-header-checkbox">
                     <p-tableHeaderCheckbox style="width: 4rem"></p-tableHeaderCheckbox>
                 </th>
-                <th>{{ 'edit.content.category-field.search.name' | dm }}</th>
-                <th>{{ 'edit.content.category-field.search.assignee' | dm }}</th>
+                <th data-testId="table-header-category-name" id="category-name" scope="col">
+                    {{ 'edit.content.category-field.search.name' | dm }}
+                </th>
+                <th id="parents" data-testId="table-header-parents" scope="col">
+                    {{ 'edit.content.category-field.search.assignee' | dm }}
+                </th>
             </tr>
         </ng-template>
 
         <ng-template let-category pTemplate="body">
-            <tr>
+            <tr data-testId="table-row">
                 <td>
                     <p-tableCheckbox [value]="category"></p-tableCheckbox>
                 </td>
@@ -33,6 +38,7 @@
     </p-table>
     } @else {
     <dot-table-skeleton
+        data-testId="categories-skeleton"
         [columns]="[
             '',
             'edit.content.category-field.search.name' | dm,
