feat(DotEditableTex): Render Content dynamically

--- a/core-web/libs/sdk/angular/src/lib/components/dot-editable-text/dot-editable-text.component.css
+++ b/core-web/libs/sdk/angular/src/lib/components/dot-editable-text/dot-editable-text.component.css
@@ -1,3 +1,4 @@
-:host {
-    display: block;
+:host ::ng-deep .mce-content-body:not(.mce-edit-focus) {
+    outline: 2px solid #006ce7;
+    border-radius: 4px;
 }
