--- a/core-web/libs/sdk/angular/src/lib/components/dot-editable-text/dot-editable-text.component.html
+++ b/core-web/libs/sdk/angular/src/lib/components/dot-editable-text/dot-editable-text.component.html
@@ -1,11 +1,8 @@
 @if (isInsideEditor) {
 <editor
+    #tinyEditor
     [init]="init"
     [initialValue]="content"
     (onMouseDown)="onMouseDown($event)"
     (onFocusOut)="onFocusOut()" />
-} @else { @if(format === 'html') {
-<div [innerHTML]="safeContent"></div>
-} @else {
-{{ content }}
-} }
+}
