--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/dot-edit-content-category-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/dot-edit-content-category-field.component.html
@@ -1,6 +1,8 @@
 @if (store.selected().length) {
 <div class="dot-category-field__categories" data-testId="category-chip-list">
-    <dot-category-field-chips [categories]="store.selected()" />
+    <dot-category-field-chips
+        [categories]="store.selected()"
+        (remove)="store.removeSelected($event)" />
 </div>
 }
 
