feat(edit-content): improve category field chips styling

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/dot-edit-content-category-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/dot-edit-content-category-field.component.html
@@ -1,9 +1,9 @@
 @if (store.selected().length) {
-<div class="dot-category-field__categories" data-testId="category-chip-list">
-    <dot-category-field-chips
-        [categories]="store.selected()"
-        (remove)="store.removeSelected($event)" />
-</div>
+<dot-category-field-chips
+    data-testId="category-chip-list"
+    [categories]="store.selected()"
+    (remove)="store.removeSelected($event)" />
+
 }
 
 <div class="dot-category-field__select">
