feat(edit-content): update category field chips component to emit remove event

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-chips/dot-category-field-chips.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-chips/dot-category-field-chips.component.html
@@ -6,7 +6,7 @@
         [label]="category.value"
         tooltipPosition="top"
         styleClass="p-chip-sm"
-        (onRemove)="onRemove(category)" />
+        (onRemove)="remove.emit(category.key)" />
     } @if ($showAllBtn()) {
     <button
         (click)="toogleShowAll()"
