--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-chips/dot-category-field-chips.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-chips/dot-category-field-chips.component.html
@@ -5,7 +5,8 @@
         [removable]="true"
         [label]="category.value"
         tooltipPosition="top"
-        styleClass="p-chip-sm" />
+        styleClass="p-chip-sm"
+        (onRemove)="remove.emit(category.key)" />
     } @if ($showAllBtn()) {
     <button
         (click)="toogleShowAll()"
