--- a/core-web/libs/sdk/angular/src/lib/components/dot-editable-text/dot-editable-text.component.css
+++ b/core-web/libs/sdk/angular/src/lib/components/dot-editable-text/dot-editable-text.component.css
@@ -1,4 +1,4 @@
-:host ::ng-deep .mce-content-body:not(.mce-edit-focus) {
+:host ::ng-deep .mce-content-body:not(.mce-edit-focus):hover {
     outline: 2px solid #006ce7;
     border-radius: 4px;
 }
