--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-persona-selector/edit-ema-persona-selector.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-persona-selector/edit-ema-persona-selector.component.html
@@ -21,7 +21,7 @@
 <p-overlayPanel #op styleClass="edit-ema-selector" data-testId="persona-op">
     <p-listbox
         (onChange)="onSelect($event); op.toggle($event)"
-        [options]="personas"
+        [options]="personas.items"
         #listbox
         optionLabel="label"
         data-testId="persona-listbox"
@@ -52,4 +52,14 @@
             </div>
         </ng-template>
     </p-listbox>
+    @if(personas?.totalRecords > MAX_PERSONAS_PER_PAGE){
+    <p-paginator
+        class="p-paginator-sm"
+        [rows]="personas.itemsPerPage"
+        [totalRecords]="personas.totalRecords"
+        (onPageChange)="onPaginate($event)"
+        [showFirstLastIcon]="false"
+        [pageLinkSize]="0"
+        data-testId="persona-paginator" />
+    }
 </p-overlayPanel>
