feat(edit-content) add selected component in sidebar, remove item and clear all button #28493

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-search/dot-category-field-search.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-search/dot-category-field-search.component.html
@@ -6,7 +6,7 @@
         data-testId="search-input"
         pInputText
         type="text" />
-    @if (searchControl.value && !$isLoading()) {
+    @if (!searchControl.pristine && !$isLoading()) {
     <span
         data-testId="search-icon-clear"
         (click)="clearInput()"
