--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-search-list/dot-category-field-search-list.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-search-list/dot-category-field-search-list.component.html
@@ -32,7 +32,11 @@
                     <p-tableCheckbox [value]="category"></p-tableCheckbox>
                 </td>
                 <td>{{ category.value }}</td>
-                <td>{{ category.path }}</td>
+                <td>
+                    <span [pTooltip]="category.path" tooltipPosition="top">
+                        {{ category.path }}
+                    </span>
+                </td>
             </tr>
         </ng-template>
     </p-table>
